[gd_scene load_steps=10 format=2]

[ext_resource path="res://Weapons/AbstractWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/AbstractHammer.gd" type="Script" id=2]
[ext_resource path="res://Art/0x72_16x16DungeonTileset.v4.png" type="Texture" id=3]
[ext_resource path="res://DamageArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://SFX/hammer_throw.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/hurt_2.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 4 )

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -8 ), Vector2( 48, 0 ), Vector2( 0, 0 ), Vector2( -8, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0, 45.0, 0.0, 30.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "telegraph"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, 0 ), Vector2( -8, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, -60.0, -30.0, -60.0, -30.0, -45.0 ]
}

[node name="Hammer" instance=ExtResource( 1 )]
script = ExtResource( 2 )
held_distance = 6.0

[node name="Sprite" type="Sprite" parent="Body" index="0"]
position = Vector2( 4, 0 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 120, 108, 8, 20 )

[node name="DamageArea" parent="Body" index="1" instance=ExtResource( 4 )]
damage_amount = 4.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/DamageArea" index="0"]
position = Vector2( 9, 0 )
shape = SubResource( 3 )

[node name="AttackAnimator" type="AnimationPlayer" parent="." index="1"]
anims/attack = SubResource( 1 )
anims/telegraph = SubResource( 2 )

[node name="AttackSFX" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"

[node name="PlayerHurt" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="entity_damaged" from="Body/DamageArea" to="." method="_on_DamageArea_entity_damaged"]
[connection signal="animation_finished" from="AttackAnimator" to="." method="_on_AttackAnimator_animation_finished"]
